# spasm

./: .env  .gitignore  Cargo.toml  readme.md
src/: command.rs  error.rs  main.rs  utils.rs  vars.rs
src/crypto/: backend.rs
src/hibp/: breached_account.rs  http.rs  mod.rs  pwned_passwords.rs
tests/: http-client.env.json  tests.http
