[package]
name = "spasm"
version = "0.1.0"
authors = ["someone"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha-1 = "0.8"
reqwest = { version = "0.10", features = ["json","blocking"] }
tokio = { version = "0.2", features = ["macros"] }
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
colored = "2.0"
percent-encoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.7"
argonautica = "0.2.0"
clipboard-ext = "0.2.0"
ring = "0.16"
rpassword = "5.0"
log = "0.4.8"
env_logger ="0.7.1"
dotenv = "0.15"


